--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,34 @@ a{
     color: #333;
     background-color: #D9AA8A;
 }
+.back-to-position {
+    opacity: 0;
+    transition: 1s;
+}
+.back-to-position.to-right {
+    transform: translateX(-150px);
+}
+.back-to-position.to-left {
+    transform: translateX(150px); /*원래 상태로 돌아온다면..왼쪽으로 가는것 처럼 보일것이다*/
+
+}
+.show .back-to-position{
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.show .back-to-position.delay-0{
+    transition-delay: 0s;
+}
+.show .back-to-position.delay-1{
+    transition-delay: .3s;
+}
+.show .back-to-position.delay-2{
+    transition-delay: .6s;
+}
+.show .back-to-position.delay-3{
+    transition-delay: .9s;
+}
 
 
 /*HEADER*/
